# tic-tac-toe

./: LICENSE  README.md  pyproject.toml
tic_tac_toe/: tic_tac_toe.py
tic_tac_toe/tests/: test_tic_tac_toe.py
